mlmodel/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mlmodel-svc
  namespace: mlmodel
  labels:
    app: mlmodel
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: mlmodel
