mlmodel/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: realtimeapp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - mlmodel.baeke.info
    secretName: mlmodel-baeke-info-tls
  rules:
  - host: mlmodel.baeke.info
    http:
      paths:
      - path: /
        backend:
          serviceName: mlmodel
          servicePort: 80
